[tool.poetry]
name = "py-rap-gen"
version = "0.1.0"
description = ""
authors = ["Katsuya SHIMABUKURO <katsu.generation.888@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
mecab-python3 = "^0.996.1"
numpy = "^1.16"
pandas = "^0.24.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
nose = "^1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
preprocess = "py_rap_gen.preprocess:main"
